--- a/package.json
+++ b/package.json
@@ -1,47 +1,36 @@
 {
   "name": "cordova-plugin-email-composer",
-  "version": "0.8.9",
+  "version": "0.8.3",
   "description": "Provides access to the standard interface that manages the editing and sending an email message",
   "cordova": {
-    "id": "cordova-plugin-email-composer",
+    "id": "de.appplant.cordova.plugin.email-composer",
     "platforms": [
       "ios",
-      "osx",
       "android",
+      "amazon-fireos",
       "windows",
       "browser"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/katzer/cordova-plugin-email-composer.git"
+    "url": "https://github.com/katzer/cordova-plugin-email-composer.git"
   },
   "keywords": [
     "appplant",
     "email",
+    "cordova",
     "ecosystem:cordova",
     "cordova-ios",
-    "cordova-osx",
     "cordova-android",
+    "cordova-amazon-fireos",
     "cordova-windows",
     "cordova-browser"
   ],
   "engines": [
     {
       "name": "cordova",
-      "version": ">=6.0.0"
-    },
-    {
-      "name": "cordova-android",
-      "version": ">=6.2.0"
-    },
-    {
-      "name": "cordova-ios",
-      "version": ">=4.0.0"
-    },
-    {
-      "name": "cordova-windows",
-      "version": ">=4.3.0"
+      "version": ">=3.0.0"
     }
   ],
   "author": "Sebastián Katzer",
@@ -49,5 +38,5 @@
   "bugs": {
     "url": "https://github.com/katzer/cordova-plugin-email-composer/issues"
   },
-  "homepage": "https://github.com/katzer/cordova-plugin-email-composer#readme"
+  "homepage": "https://github.com/katzer/cordova-plugin-email-composer"
 }
